Redirecionamento entre páginas (Register, Login e Esqueci-me Palavra-passe)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,6 +37,9 @@
         <activity
             android:name=".Login"
             android:exported="false" />
+        <activity
+            android:name=".ForgotPassword"
+            android:exported="false"/>
     </application>
 
 </manifest>
