Redirecionamento entre páginas (icons da página principal + icon de adicionar queimada)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,9 @@
         <activity
             android:name=".ForgotPassword"
             android:exported="false"/>
+        <activity
+            android:name=".createQueimada"
+            android:exported="false" />
     </application>
 
 </manifest>
