--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,6 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
 
-
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -16,10 +15,14 @@
         android:theme="@style/Theme.ChamaSegura"
         tools:targetApi="31">
         <activity
+            android:name=".HomePageAdmin"
+            android:exported="false" />
+        <activity
             android:name=".slider"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
@@ -41,11 +44,10 @@
             android:exported="false" />
         <activity
             android:name=".ForgotPassword"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".createQueimada"
             android:exported="false" />
     </application>
-
 
 </manifest>
