atualização dos users feito

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,9 @@
         <activity
             android:name=".createQueimada"
             android:exported="false" />
+        <activity
+            android:name=".EditUserActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
