--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,6 +51,9 @@
         <activity
             android:name=".EditUserActivity"
             android:exported="false" />
+        <activity
+            android:name=".CreateUserActivity"
+            android:exported="false" />
     </application>
 
 </manifest>
