Criação da page Rules (falta fazer post para a bd)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.ChamaSegura"
         tools:targetApi="31">
         <activity
+            android:name=".CreateRules"
+            android:exported="false" />
+        <activity
             android:name=".HomePageAdmin"
             android:exported="false" />
         <activity
